# neoism

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile.dockerignore  FONTS.md  LICENSE  Makefile  NOTICE  README.md  config.toml  docker-compose.yml  flake.nix  install.sh  install_old.sh  pkgNeoism.nix
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build-mac-win.yml  build-stack.yml  release-neoism.yml  release.yml  test.yml
.neoism/: workspace.toml
copa/: Cargo.toml
copa/src/: table.rs
corcovado/: Cargo.toml
docs/: CHROME_LIFT_AUDIT.md  NEOISM_UI_DESIGN.md  README.md  daemon-session-model.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: intro.md
extra/man/: Makefile  README.md  neoism-bindings.5.scd  neoism.1.scd  neoism.5.scd
fixtures/markdown/: Linked Note 291.md
misc/: dev.neoism.Neoism.metainfo.xml  neoism.desktop
misc/scripts/: test-progress-bar.sh
misc/windows/: rio.wxs
neoism-agent/: README.md
neoism-agent/crates/neoism-agent-cli/: Cargo.toml
neoism-agent/crates/neoism-agent-cli/src/: acp.rs  acp_params.rs  chat.rs  chat_blockers.rs  chat_command_handlers.rs  chat_commands.rs  chat_diff.rs  chat_header.rs  chat_input.rs  chat_input_completion.rs  chat_markdown.rs  chat_picker.rs  chat_render.rs  chat_session.rs  chat_sse.rs  chat_status.rs  chat_stream.rs  chat_terminal.rs  chat_tests.rs  chat_tool_render.rs  chat_ui.rs  cli_commands.rs  cli_direct_commands.rs  cli_http.rs  main.rs  model_ref.rs  tui_launcher.rs
neoism-agent/crates/neoism-agent-server/: Cargo.toml
neoism-agent/crates/neoism-agent-server/src/: agent.rs  agent_native.rs  agent_tool_registry.rs  app_router.rs  app_routes.rs  auth_store.rs  background_job.rs  command_routes.rs  compat_routes.rs  config.rs  config_parse.rs  config_sources.rs  custom_tool.rs  edit_smoke_tests.rs  error.rs  event_routes.rs  experimental_routes.rs  external_acp.rs  external_agent.rs  file_routes.rs  firecrawl.rs  global_routes.rs  goal_routes.rs  instruction.rs  interaction.rs  lib.rs  lsp.rs  lsp_client.rs  lsp_languages.rs  lsp_parse.rs  lsp_query.rs  lsp_routes.rs  lsp_scan.rs  lsp_service.rs  lsp_tests.rs  lsp_uri.rs  managed_lsp_path.rs  mcp.rs  mcp_auth.rs  mcp_memory.rs  (+86 more)
neoism-agent/crates/neoism-agent-server/src/external_agent/: acp_run.rs  events.rs  helpers.rs  lifecycle.rs  requests.rs  runtime.rs  tests.rs
neoism-agent/crates/neoism-agent-server/src/tool_support/: args.rs  artifact.rs  bash.rs  diagnostics.rs  edit_match.rs  fff.rs  file.rs  format.rs  locks.rs  notes.rs  patch.rs  patch_tool.rs  paths.rs  process.rs  search.rs  shell_scan.rs  truncate.rs  web.rs
neoism-backend/: Cargo.toml
neoism-backend/src/: animation.rs  clipboard.rs  effects_adapter.rs  graphics_adapter.rs  lib.rs
neoism-extensions/: Cargo.toml  build.rs
neoism-extensions/data/: mcp_curated.json  mcp_registry.json
neoism-extensions/src/: agent_config.rs  install_runner.rs  installed.rs  lib.rs  managed_bin.rs  manifest.rs  mason.rs  paths.rs
neoism-frontend/: README.md
neoism-frontend/desktop/: Cargo.toml
neoism-frontend/shared/: Cargo.toml
neoism-frontend/wasm/: Cargo.toml
neoism-frontend/wasm/smoke/: README.md  index.html
neoism-frontend/wasm/src/: lib.rs
neoism-frontend/wasm/src/rendered/: agent.rs  buffer_tabs_layout.rs  catalog.rs  chrome_bridge_core.rs  construct.rs  file_tree_workspace.rs  frame.rs  mod.rs  nvim_editor_grid.rs  overlays.rs  palettes_finder.rs  panels.rs  service_installers.rs  services.rs  status_line.rs  support.rs  terminal_input.rs
neoism-frontend/wasm/tests/: api.rs
neoism-frontend/web/: .gitignore  README.md  index.html  package-lock.json  package.json  (+3 more)
neoism-grapheme-width/: Cargo.toml  LICENSE
neoism-notifier/: Cargo.toml
neoism-proc-macros/: Cargo.toml
neoism-protocol/: Cargo.toml
neoism-remarkable/: Cargo.toml
neoism-remarkable/src/: auto.rs  controller.rs  ink_interop.rs  lib.rs  vault_sync.rs
neoism-rm-agent/: Cargo.toml
neoism-rm-agent/src/: main.rs
neoism-sync/: Cargo.toml
neoism-sync/examples/: dump_rm.rs  push_vault.rs  render_pdf.rs  rm_to_neodraw.rs  share_dir.rs
neoism-sync/src/: bridge.rs  core.rs  discovery.rs  lib.rs  net.rs  note.rs  peer.rs  remarkable.rs  stroke.rs  sync_plan.rs
neoism-sync/src/export/: mod.rs  pdf.rs  xochitl.rs
neoism-terminal-core/: Cargo.toml
neoism-terminal-core/src/: damage.rs  effects.rs  graphics.rs  handler.rs  lib.rs  selection.rs  snapshot.rs
neoism-terminal-core/src/ansi/: graphics.rs  iterm2_image_protocol.rs  kitty_graphics_protocol.rs  kitty_virtual.rs  sixel.rs
neoism-terminal-core/src/colors/: mod.rs  term.rs
neoism-terminal-core/src/crosswords/: attr.rs  mod.rs  search.rs  style.rs  vi_mode.rs
neoism-terminal-core/src/crosswords/grid/: mod.rs  resize.rs
neoism-terminal-core/tests/: effects_buffer.rs  phase1_self_contained.rs  snapshot.rs  snapshot_from_crosswords.rs
neoism-terminal-pty/: Cargo.toml
neoism-terminal-pty/src/: lib.rs  local.rs  remote.rs  session.rs
neoism-terminal-pty/tests/: spawn_echo.rs
neoism-window/: Cargo.toml  LICENSE-APACHE  README.md  build.rs
neoism-workspace-daemon/: Cargo.toml
neoism-workspace-index/: Cargo.toml
neoism-workspace-index/src/: config.rs  frontmatter.rs  graph_db.rs  lib.rs  link_repair.rs  notes.rs  query.rs  registry.rs  watcher.rs
neoism-workspace-index/src/welcome/: Getting Started.md  Keybindings.md  Multiplayer.md  Notes and Drawings.md  The Neoism Agent.md  The Terminal.md
neoism-workspace-index/src/welcome/Configuration/: Configuration.md  Shaders.md  Themes, Cursor and Fonts.md
neoism-workspace-index/src/welcome/Editor/: Languages and LSP.md  Neovim.md  The Editor.md
rm-samples/: .gitignore
scripts/: build-treesitter-runtime.sh  check_no_ui_in_desktop_fork.sh  desktop_port_audit.sh  dev-neoism.sh  dev-sim.sh  dist-moved-notice.sh  freeze-dump.sh  fresh-run.sh  install.sh  neoism-daemon.sh  release.sh  wasm-safe-time.py
sugarloaf/: Cargo.toml  README.md  WASM_AUDIT.md  build.rs
teletypewriter/: Cargo.toml  LICENSE  README.md
(+923 files in other folders)
