[package]
name = "neoism-terminal-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Pure terminal engine for Neoism (no native deps)."

[lib]
path = "src/lib.rs"

[dependencies]
copa = { workspace = true }
web-time = "1.1"
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
simdutf8 = { version = "0.1.5", default-features = false }
bitflags = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
smol_str = { workspace = true }
lazy_static = { workspace = true }
regex-automata = "0.4.9"
memchr = { version = "2.7.4", default-features = false }
image_rs = { workspace = true }
neoism-grapheme-width = { workspace = true }
url = { workspace = true }
cursor-icon = { version = "1.1.0", default-features = false }
flate2 = { workspace = true }

# `libc` is only consulted by the unix-only kitty graphics SHM /
# `transmission_medium=Shared` branch. Gated to non-wasm so the engine
# still builds for `wasm32-unknown-unknown`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_System_Memory", "Win32_Foundation"] }

[dev-dependencies]
serde_json = "1"
