[package]
name = "neoism-terminal-pty"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
teletypewriter = { workspace = true }
corcovado = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
