[package]
name = "neoism-workspace-index"
description = "Neoism workspace note graph, Markdown indexing, and query APIs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notify = "8.2.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml = "0.9.2"
uuid.workspace = true
