[package]
name = "neoism-terminal-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
description = "wasm-bindgen bindings around neoism-terminal-core (scaffolding)."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# `--features web` is the documented invocation for wasm32 builds (see
# the task brief + sugarloaf's own `web` feature). Sugarloaf's `web`
# feature is already activated unconditionally in the wasm32-only dep
# table below, so this is effectively a no-op selector — present so the
# build command line stays uniform with sugarloaf's own.
web = []
default = []

[dependencies]
neoism-terminal-core = { workspace = true }
neoism-ui = { workspace = true }
neoism-protocol = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
web-time = "1.1"

# wasm32-only: pull in sugarloaf (with its `web` browser entrypoint),
# `wgpu` with the browser backends, and the bits of `web-sys` we need
# to receive an `HtmlCanvasElement` from JS. The async `Sugarloaf::from_canvas`
# constructor is wasm32-only, so all of this lives behind the target gate.
[target.'cfg(target_arch = "wasm32")'.dependencies]
sugarloaf = { workspace = true, features = ["web"] }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen-futures = { workspace = true }
# Force `js` feature on transitive getrandom for wasm32 builds. Some
# dep (likely via sqlx/reqwest in the protocol crate's transitive set)
# pulls getrandom in without it, which doesn't compile on wasm.
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Element",
    "HtmlElement",
    "Window",
    "Document",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
