[package]
name = "neoism-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
libc.workspace = true
neoism-agent-core.workspace = true
neoism-agent-server.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tree-sitter-highlight = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tracing-subscriber.workspace = true

[[bin]]
name = "neoism-agent"
path = "src/main.rs"
