[package]
name = "neoism-agent-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
fff-search.workspace = true
futures-core.workspace = true
futures.workspace = true
git2.workspace = true
libc.workspace = true
neoism-agent-core.workspace = true
neoism-extensions.workspace = true
neoism-workspace-index.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
tower.workspace = true
